# vertiche-legal-ops

./: .env  .gitignore  AGENTS.md  DECISIONS.md  Makefile  docker-compose.yml  index.html  package-lock.json  package.json  vertiche-frontend-docs.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 11e53d18194c_initial.py  32d49c039395_crear_reglas_alerta.py  bc4866e4f4ca_rename_url_to_ruta_archivo.py  c2f90a1b63e8_add_ocr_fields_to_documento.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/: __init__.py  alertas.py  auth.py  dashboard.py  deps.py  documentos.py  tiendas.py  tramites.py  usuarios.py
backend/app/core/: audit.py  exceptions.py  pagination.py  security.py  storage.py
backend/app/models/: __init__.py  alerta.py  associations.py  documento.py  historial.py  observacion.py  regla_alerta.py  tienda.py  tramite.py  usuario.py
backend/app/repositories/: alerta_repo.py  documento_repo.py  historial_repo.py  tienda_repo.py  tramite_repo.py  usuario_repo.py
backend/app/schemas/: __init__.py  alerta.py  auth.py  dashboard.py  documento.py  historial.py  performance.py  tienda.py  tramite.py  usuario.py
backend/app/scripts/: bootstrap.py  clear_db.py  create_reglas.py  init.py  scan_for_alertas.py  seed.py
backend/app/services/: alerta_service.py  auth_service.py  dashboard_service.py  documento_service.py  historial_service.py  tienda_service.py  tramite_service.py  (+1 more)
backend/docs/: architecture.md  coding-style.md  endpoints.md
(+137 files in other folders)
