[project]
name = "vertiche-legal-ops-backend"
version = "0.1.0"
description = "Vertiche LegalOps - Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "alembic>=1.13.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "arq>=0.26.0",
    "apscheduler>=3.10.0",
    "aiofiles>=24.1.0",
    "python-dateutil>=2.9.0.post0",
    "minio>=7.2.20",
]

[project.scripts]
seed = "app.seed:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
